fix: 🐛 fix select and collapse dynomic slot

--- a/packages/ui/select/select-option.module.css
+++ b/packages/ui/select/select-option.module.css
@@ -1,5 +1,6 @@
 .select-option {
-    composes: -v-bg-heavy -v-h -v-px from global;
+    composes: -v-bg-heavy  -v-h -v-px from global;
+    margin: var(--margin-md) 0;
 }
 
 .option {
